--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -1,11 +1,13 @@
 {
   "name": "anonymous-feedback",
-  "private": false,
+  "private": true,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "macaddress": "^0.5.1",
+    "mqtt": "^4.2.1",
     "object.omit": "^3.0.0",
     "react": "^15.6.2",
     "react-app-rewired": "^2.1.6",
