- target = node from config-override

--- a/anonymous-feedback/.babelrc
+++ b/anonymous-feedback/.babelrc
@@ -1,6 +1,11 @@
 {
-    "presets": ["@babel/preset-env"],
-    {
-      "useBuiltIns": "entry"
+  "presets": ["@babel/preset-env"],
+  {
+    "useBuiltIns": "entry"
+  },
+  {
+    "targets": {
+      "node": true
     }
+  }
 }
