--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -7,10 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "macaddress": "^0.5.1",
-    "mqtt": "^4.2.1",
     "object.omit": "^3.0.0",
-    "react": "^15.6.2",
+    "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
