--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -3,19 +3,25 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-env": "7.10.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "core-util-is": "^1.0.2",
+    "express": "^4.17.1",
     "macaddress": "^0.5.1",
     "mqtt": "^4.2.1",
     "object.omit": "^3.0.0",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
+    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
+    "dev:start": "nodemon ./server-build/index.js",
+    "dev": "npm-run-all --parallel build dev:*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +46,16 @@
   "main": "index.js",
   "repository": "https://github.com/aidan-parkinson/anonymous-feedback",
   "author": "aidan parkinson",
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-react": "7.10.4",
+    "babel-loader": "8.1.0",
+    "mini-css-extract-plugin": "^0.11.2",
+    "nodemon": "2.0.4",
+    "npm-run-all": "4.1.5",
+    "webpack": "4.42.0",
+    "webpack-cli": "3.3.12",
+    "webpack-node-externals": "1.7.2"
+  }
 }
