--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -7,8 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-react-app": "^9.1.2",
     "core-util-is": "^1.0.2",
     "express": "^4.17.1",
+    "ignore-styles": "^5.0.1",
     "macaddress": "^0.5.1",
     "mqtt": "^4.2.1",
     "object.omit": "^3.0.0",
@@ -19,13 +23,11 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
-    "dev:start": "nodemon ./server-build/index.js",
-    "dev": "npm-run-all --parallel build dev:*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server/bootstrap.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,15 +49,7 @@
   "repository": "https://github.com/aidan-parkinson/anonymous-feedback",
   "author": "aidan parkinson",
   "devDependencies": {
-    "@babel/core": "7.10.4",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-react": "7.10.4",
-    "babel-loader": "8.1.0",
-    "mini-css-extract-plugin": "^0.11.2",
-    "nodemon": "2.0.4",
-    "npm-run-all": "4.1.5",
-    "webpack": "4.42.0",
-    "webpack-cli": "3.3.12",
-    "webpack-node-externals": "1.7.2"
+    "@babel/core": "^7.11.6",
+    "@babel/register": "^7.11.5"
   }
 }
