--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -3,13 +3,12 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@babel/preset-env": "^7.11.5",
+    "@babel/polyfill": "^7.11.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-preset-react-app": "^9.1.2",
     "core-util-is": "^1.0.2",
     "express": "^4.17.1",
     "ignore-styles": "^5.0.1",
@@ -49,10 +48,13 @@
   "repository": "https://github.com/aidan-parkinson/anonymous-feedback",
   "author": "aidan parkinson",
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@babel/register": "^7.11.5",
-    "babel-preset-es2015": "^6.24.1"
+    "@babel/register": "^7.11.5"
   }
 }
