--- a/anonymous-feedback/.babel.config.json
+++ b/anonymous-feedback/.babel.config.json
@@ -6,6 +6,9 @@
   "plugins": [
     "@babel/plugin-transform-react-jsx",
     "@babel/plugin-transform-modules-commonjs",
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "dynamic-import-node",
+    "@loadable/babel-plugin",
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
