--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-loadable": "^5.5.0",
     "react-scripts": "3.4.3",
     "webpack-dev-server": "^3.11.0"
   },
@@ -51,10 +52,13 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@babel/register": "^7.11.5"
+    "@babel/register": "^7.11.5",
+    "@loadable/babel-plugin": "^5.13.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3"
   }
 }
