--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
+    "bootstrap": "^4.5.2",
     "core-util-is": "^1.0.2",
     "express": "^4.17.1",
     "ignore-styles": "^5.0.1",
@@ -17,6 +18,7 @@
     "object.omit": "^3.0.0",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
