videos stop playing now!

--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -13,6 +13,7 @@
     "core-util-is": "^1.0.2",
     "express": "^4.17.1",
     "ignore-styles": "^5.0.1",
+    "jquery": "^3.5.1",
     "macaddress": "^0.5.1",
     "mqtt": "^4.2.1",
     "object.omit": "^3.0.0",
@@ -21,8 +22,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "webpack-dev-server": "^3.11.0"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
