--- a/anonymous-feedback/package.json
+++ b/anonymous-feedback/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "core-util-is": "^1.0.2",
     "express": "^4.17.1",
+    "fs-web": "^1.0.1",
     "ignore-styles": "^5.0.1",
     "macaddress": "^0.5.1",
     "mqtt": "^4.2.1",
